<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        style="@style/external_container"
        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/area_name"
            style="@style/general_edit_text"
            android:hint="@string/area_label_insert_area_name"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/area_label_select_radius"
                android:id="@+id/radius_spinner_label"
                style="@style/general_text_view"/>
            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/area_radius"
                android:layout_alignRight="@+id/radius_spinner_label"
                android:layout_alignParentRight="true">
            </Spinner>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/area_threshold"
                android:id="@+id/area_threshold_label"
                style="@style/general_text_view"/>
            <TextView
                style="@style/general_text_view"
                android:id="@+id/area_threshold"
                android:layout_alignRight="@+id/area_threshold_label"
                android:layout_alignParentRight="true">
            </TextView>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/area_latitude"
                android:id="@+id/area_lat_label"
                style="@style/general_text_view"/>
            <TextView
                style="@style/general_text_view"
                android:id="@+id/area_latitude"
                android:layout_alignRight="@+id/area_lat_label"
                android:layout_alignParentRight="true">
            </TextView>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/area_longitude"
                android:id="@+id/area_long_label"
                style="@style/general_text_view"/>
            <TextView
                style="@style/general_text_view"
                android:id="@+id/area_longitude"
                android:layout_alignRight="@+id/area_long_label"
                android:layout_alignParentRight="true">
            </TextView>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/area_delete_area"
                android:id="@+id/area_delete_label"
                style="@style/general_text_view"/>
            <ImageButton
                android:layout_gravity="center"
                android:layout_alignRight="@+id/area_delete_label"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/delete_button"
                android:src="@drawable/ic_delete_black_24dp"
                android:alpha="0.4"
                android:background="@android:color/transparent"/>
        </RelativeLayout>

    </LinearLayout>