<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <!-- SOUND PROFILE -->

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/profile_soundprofile_container"
        style="@style/profile_option_container">

            <LinearLayout
                style="@style/profile_option_icon_subcontainer"
                android:id="@+id/profile_sound_profile_icon_container">
                <ImageView
                    style="@style/profile_option_icon"
                    android:id="@+id/profile_soundprofile_icon"
                    android:src="@drawable/ic_record_voice_over_black_48dp"
                    />

            </LinearLayout>

            <LinearLayout
                style="@style/profile_option_content_subcontainer"
                android:layout_toRightOf="@+id/profile_sound_profile_icon_container">

                <TextView
                    style="@style/general_text_view"
                    android:text="@string/profile_options_label_soundprofile"/>

                <TextView
                    style="@style/small_text_view"
                    android:text="@string/profile_options_description_soundprofile" />


                <TextView
                    style="@style/very_small_text_view"
                    android:id="@+id/profile_soundprofile_value"
                    />



            </LinearLayout>


            <LinearLayout
                style="@style/profile_option_activator_subcontainer">
                <android.support.v7.widget.SwitchCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/profile_soundprofile_active"/>

            </LinearLayout>

    </RelativeLayout>

    <View style="@style/profile_option_divisor"/>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/profile_volumes_container"
        style="@style/profile_option_container">

            <LinearLayout
                style="@style/profile_option_icon_subcontainer"
                android:id="@+id/profile_volumes_icon_container">
                <ImageView
                    style="@style/profile_option_icon"
                    android:src="@drawable/ic_volume_up_black_48dp"
                    />

            </LinearLayout>

        <LinearLayout
            style="@style/profile_option_content_subcontainer"
            android:layout_toRightOf="@+id/profile_volumes_icon_container">

                <TextView
                    style="@style/general_text_view"
                    android:text="@string/profile_options_label_sounds_ringtone_volumes"/>

                <TextView
                    style="@style/small_text_view"
                    android:text="@string/profile_options_description_volumes" />

                <TextView
                    style="@style/very_small_text_view"
                    android:id="@+id/profile_volumes_value"
                    />

            </LinearLayout>


            <LinearLayout
                style="@style/profile_option_activator_subcontainer">

                <android.support.v7.widget.SwitchCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/profile_volumes_active"/>

            </LinearLayout>

    </RelativeLayout>

    <View style="@style/profile_option_divisor"/>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/profile_ringtone_uri_container"
        style="@style/profile_option_container">

            <LinearLayout
                style="@style/profile_option_icon_subcontainer"
                android:id="@+id/profile_ringtone_icon_container">
                <ImageView
                    style="@style/profile_option_icon"
                    android:src="@drawable/ic_music_note_black_48dp"
                    />

            </LinearLayout>

        <LinearLayout
            style="@style/profile_option_content_subcontainer"
            android:layout_toRightOf="@+id/profile_ringtone_icon_container">

                <TextView
                    style="@style/general_text_view"
                    android:text="@string/profile_options_label_ringtone_uri"/>

                <TextView
                    style="@style/small_text_view"
                    android:text="@string/profile_options_description_ringtone_uri" />

                <TextView
                    style="@style/very_small_text_view"
                    android:id="@+id/profile_ringtone_uri_value"
                    />

            </LinearLayout>

            <LinearLayout
                style="@style/profile_option_activator_subcontainer">

                <android.support.v7.widget.SwitchCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/profile_ringtone_uri_active"/>

            </LinearLayout>

    </RelativeLayout>

    <View style="@style/profile_option_divisor"/>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/profile_notifications_uri_container"
        style="@style/profile_option_container">

            <LinearLayout
                style="@style/profile_option_icon_subcontainer"
                android:id="@+id/profile_notifications_uri_icon_container">
                <ImageView
                    style="@style/profile_option_icon"
                    android:src="@drawable/ic_notifications_black_48dp"
                    />

            </LinearLayout>

        <LinearLayout
            style="@style/profile_option_content_subcontainer"
            android:layout_toRightOf="@+id/profile_notifications_uri_icon_container">

                <TextView
                    style="@style/general_text_view"
                    android:text="@string/profile_options_label_notifications_uri"/>

                <TextView
                    style="@style/small_text_view"
                    android:text="@string/profile_options_description_notifications_uri" />

                <TextView
                    style="@style/very_small_text_view"
                    android:id="@+id/profile_notifications_uri_value"
                    />

            </LinearLayout>

            <LinearLayout
                style="@style/profile_option_activator_subcontainer">

                <android.support.v7.widget.SwitchCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/profile_notifications_uri_active"/>

            </LinearLayout>

    </RelativeLayout>

        <View style="@style/profile_option_divisor"/>

    </LinearLayout>

</ScrollView>
